--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,4 +1,8 @@
-streamlit
-transformers>=4.30
-torch>=2.0.0
+streamlit>=1.36.0
+transformers==4.33.3
+torch==2.0.1
 Pillow
+protobuf<4.0.0
+sentencepiece
+tqdm
+requests
