--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,8 +1,6 @@
-streamlit>=1.36.0
-transformers==4.33.3
-torch==2.0.1
+streamlit
+transformers==4.41.0
+torch==2.2.0
 Pillow
-protobuf<4.0.0
+accelerate
 sentencepiece
-tqdm
-requests
